Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference08.out
MethodReference08.java:14:17: compiler.warn.raw.class.use: MethodReference08.Foo, MethodReference08.Foo<X>
MethodReference08.java:21:19: compiler.warn.raw.class.use: MethodReference08.Foo, MethodReference08.Foo<X>
- compiler.err.warnings.and.werror
1 error
2 warnings
